--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Baking App</string>
+    <string name="media_url_mp4"><![CDATA[https://www.youtube.com/watch?v=NVoEDjvuhNI&t=932s]]></string>
 </resources>
